# SWEng_task

./: CMakeLists.txt  LICENSE  README.md  build_com.bat  build_emulator.bat  run_com.bat  run_emulator.bat
build-com/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NATE_two_apps.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-com/receiver_cpp/: cmake_install.cmake  receiver.vcxproj  receiver.vcxproj.filters
build-com/receiver_cpp/receiver.dir/Debug/: receiver.exe.recipe  receiver.ilk
build-com/sender_c/: cmake_install.cmake  sender.vcxproj  sender.vcxproj.filters
build-com/sender_c/sender.dir/Debug/: sender.exe.recipe  sender.ilk
build-com/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-emul/: ALL_BUILD.vcxproj  CMakeCache.txt  NATE_two_apps.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-emul/receiver_cpp/: cmake_install.cmake  receiver.vcxproj  receiver.vcxproj.filters
build-emul/receiver_cpp/receiver.dir/Debug/: receiver.exe.recipe  receiver.ilk
build-emul/sender_c/: cmake_install.cmake  sender.vcxproj  sender.vcxproj.filters
build-emul/sender_c/sender.dir/Debug/: sender.exe.recipe  sender.ilk
build-emul/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
receiver_cpp/: CMakeLists.txt  Config.hpp  DoubleListPool.hpp  ListenerThread.cpp  ListenerThread.hpp  WriterThread.cpp  WriterThread.hpp  receiver.cpp
sender_c/: CMakeLists.txt  packer.c  packer.h  reader.c  reader.h  ring_buffer.c  ring_buffer.h  sender.c  serial.h  serial_emul.c  serial_win.c  tcp.c  tcp.h
(+52 files in other folders)
